FIX: Simple adjusts

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>Confirme sua Live | TGM</title>
+        <title>Barba Tech</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <div class="container" id="container">
             <div class="form-container sign-up-container">
                 <form action="#">
-                    <h1>Create Account</h1>
+                    <h1>Criar Conta</h1>
                     <input type="text" placeholder="Canal" required>
                     <input type="email" placeholder="Email" required>
                     <input type="password" placeholder="Senha" minlength="8" required>
@@ -24,7 +22,7 @@
                     <h1>Entrar</h1>
                     <input type="email" placeholder="Email" required>
                     <input type="password" placeholder="Senha" minlength="8" required>
-                    <a href="#">Esqueceu sua senha jovem?</a>
+                    <a href="#">Esqueceu sua senha?</a>
                     <button id="form-signIn">Entrar</button>
                 </form>
             </div>
@@ -32,14 +30,14 @@
             <div class="overlay-container">
                 <div class="overlay">
                     <div class="overlay-panel overlay-left">
-                        <h1>É bom te ver, Streamer!</h1>
-                        <p>Entre e confirme sua live antes que seja repassada!</p>
+                        <h1>É bom te ver denovo!</h1>
+                        <p>Entre e confira as novidades!</p>
                         <button class="ghost" id="signIn">Entrar</button>
                     </div>
 
                     <div class="overlay-panel overlay-right">
-                        <h1>Bem-vindo Streamer!</h1>
-                        <p>Realize seu cadastro e confirme sua live antes que seja tarde demais!</p>
+                        <h1>Bem-vindo!</h1>
+                        <p>Realize seu cadastro e fique por dentro das novidades!</p>
                         <button class="ghost" id="signUp">Cadastrar</button>
                     </div>
                 </div>
